// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout can be rendered as home 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <h1
        class="heading2Xl"
      >
        [Translation for http://localhost:3000/data/translations.ttl#appName does not exist]
      </h1>
    </header>
    <main>
      test
    </main>
  </div>
</DocumentFragment>
`;

exports[`Layout renders as non-home by default 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <h2
        class="headingLg"
      >
        <a
          class="colorInherit"
          href="/"
        >
          [Translation for http://localhost:3000/data/translations.ttl#appName does not exist]
        </a>
      </h2>
    </header>
    <main>
      test
    </main>
    <div
      class="backToHome"
    >
      <a
        href="/"
      >
        ← Back to home
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout renders error if something goes wrong 1`] = `
<DocumentFragment>
  <div
    data-testid="error"
  >
    <h1
      data-testid="error-title"
    >
      <span
        resource=""
      />
    </h1>
    <pre
      data-testid="error-stack"
    >
      <h2 />
      <pre>
        Error: 
    at Object.&lt;anonymous&gt; (/Users/arnehassel/Projects/dnd5e-app/components/layout/index.test.tsx:33:53)
    at Object.asyncJestTest (/Users/arnehassel/Projects/dnd5e-app/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)
    at /Users/arnehassel/Projects/dnd5e-app/node_modules/jest-jasmine2/build/queueRunner.js:45:12
    at new Promise (&lt;anonymous&gt;)
    at mapper (/Users/arnehassel/Projects/dnd5e-app/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at /Users/arnehassel/Projects/dnd5e-app/node_modules/jest-jasmine2/build/queueRunner.js:75:41
    at processTicksAndRejections (internal/process/task_queues.js:85:5)
      </pre>
    </pre>
  </div>
</DocumentFragment>
`;

exports[`Layout renders loading while fetching translations 1`] = `
<DocumentFragment>
  <div
    data-testid="loading"
  >
    Loading...
  </div>
</DocumentFragment>
`;
